After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 632510 - media with AUTORUN.INF is silently ignored
media with AUTORUN.INF is silently ignored
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.32.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-10-18 22:07 UTC by mads
Modified: 2011-09-07 20:10 UTC
See Also:
GNOME target: ---
GNOME version: 2.31/2.32


Attachments
patch: nautilus-autorun-software: handle mime type x-content/unix-software only (1.38 KB, patch)
2010-10-18 22:10 UTC, mads
none Details | Review

Description mads 2010-10-18 22:07:25 UTC
(As mentioned on #524270 comment 16:)

When a media that happens to contain a AUTORUN.INF for windows autorun is inserted then it is silently ignored without giving the user any option for choosing another action.

nautilus-2.32.0-1.fc14.i686
Comment 1 mads 2010-10-18 22:10:15 UTC
Created attachment 172658 [details] [review]
patch: nautilus-autorun-software: handle mime type x-content/unix-software only

Announcing that nautilus-autorun-software only handles unix software seems like a much better solution than silently ignoring media with win32 software.

This patch works best together with the patches from bug 632509.
Comment 2 mads 2010-10-18 22:16:57 UTC
By the way: It seems like do_autorun_for_content_type misses a g_object_unref (app_info) and thus leaks?
Comment 3 Cosimo Cecchi 2011-09-07 20:10:14 UTC
Thanks, I pushed the part of this that still applies to git master.