nautilus-autorun-software: handle mime type x-content/unix-software only

This is a consequence of the fix for
https://bugs.freedesktop.org/show_bug.cgi?id=20562 .

This undoes the part of cffb9cf7025 that hardcodes that media with
x-content/win32-software are silently ignored, and thus improves on the
fix for #524270.

Wine or something could now provide a handler for win32-software.

https://bugzilla.gnome.org/show_bug.cgi?id=632510